# SystemyRozproszone_v2

./: #connection_manager.glade#  CMakeLists.txt  checkDebugConfig.cpp  checkDebugConfig.h  client.glade  debug.txt  design.glade  main.cpp  main.h
client/: client.cpp  client.glade  client.h  client_data_handling.cpp  client_data_handling.h  client_threads.cpp  client_threads.h  connection_initialize.cpp  connection_initialize.h  debuging.cpp  debuging.h
connection_manager/: connection_manager.cpp  connection_manager.glade  connection_manager.h
testfiles/: address.txt  config
